# transcriptproject

./: .env.example  .gitignore  README.md  a.txt  mcpurl.py  pyproject.toml  requirements.txt  temp.py  teste.txt
McpKanban/: TESTS.md  TOOLS.md
McpKanban/agentcore/: agentcore.json  aws-targets.json
McpKanban/agentcore/.cli/: deployed-state.json
McpKanban/agentcore/cdk/: package-lock.json
McpKanban/agentcore/cdk/lib/: cdk-stack.ts
McpKanban/app/mcp_notion/: .env.example  README.md  main.py
McpKanban/app/mcp_notion/schemas/: kanban.py
McpKanban/app/mcp_notion/services/: notion_kanban_service.py
MeetingToKanban/: TESTS.md
MeetingToKanban/agentcore/: agentcore.json  package-lock.json
MeetingToKanban/agentcore/.cli/: deployed-state.json
MeetingToKanban/agentcore/cdk/: package-lock.json
MeetingToKanban/app/MeetingToKanban_agent/: main.py  pyproject.toml
MeetingToKanban/app/notion_mcp/: pyproject.toml
MeetingToKanban/app/notion_mcp/schemas/: kanban.py
MeetingToKanban/app/notion_mcp/utils/: notion_helpers.py
OrchestratorKanban/agentcore/: agentcore.json
OrchestratorKanban/agentcore/.cli/: deployed-state.json
OrchestratorKanban/agentcore/cdk/: package-lock.json
OrchestratorKanban/app/agent_orchestrator/: main.py  parameters.py  pyproject.toml  utils.py
TranscriberProject/agentcore/: agentcore.json
TranscriberProject/agentcore/.cli/: deployed-state.json
TranscriberProject/agentcore/cdk/: package-lock.json
TranscriberProject/app/orchestrator_agent/: pyproject.toml
src/: models.py  notion_service.py  server.py
(+10 files in other folders)
